# Ray-Tracer

./: .gitignore  BVH-data.txt  BVH.cpp  BVH.h  BoxCompare.h  CMakeLists.txt  Camera.cpp  Camera.h  Hittable.h  List-data.txt  Makefile  ProgressMeter.h  PrspcCamera.h  Quadrilateral.cpp  Quadrilateral.h  README.md  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Sphere.cpp  imageOutput.cpp  main.cpp  main_linear.cpp
Cameras/: Camera.h  OrthgCamera.cpp  OrthgCamera.h  PrspcCamera.cpp
Geometry/: BoundingBox.cpp  BoundingBox.h  Hittable.h  Quadrilateral.cpp  Quadrilateral.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/: common.hpp  main.cpp  ray.hpp  vec3.cpp  vec3.hpp
src/geometry/: geometric.hpp  geometric_list.cpp  geometric_list.hpp  sphere.cpp  sphere.hpp
study/: BVH-data.txt  BVH-study.sh  List-data.txt  list-study.sh  study.sh
